src/test/ui/did_you_mean/issue-54109-and_instead_of_ampersands.stderr
error: expected `{`, found `and`
  --> $DIR/issue-54109-and_instead_of_ampersands.rs:14:10
   |
LL |     if a and b {
   |     --   ^^^
   |     |
   |     this `if` statement has a condition, but no block
   |
   = help: Use `&&` instead of `and` for the boolean operator

error: expected `{`, found `or`
  --> $DIR/issue-54109-and_instead_of_ampersands.rs:23:10
   |
LL |     if a or b {
   |     --   ^^
   |     |
   |     this `if` statement has a condition, but no block
   |
   = help: Use `||` instead of `or` for the boolean operator

error: expected one of `!`, `)`, `,`, `.`, `::`, `?`, `{`, or an operator, found `and`
  --> $DIR/issue-54109-and_instead_of_ampersands.rs:32:11
   |
LL |     if (a and b) {
   |           ^^^ expected one of 8 possible tokens here
   |
   = help: Use `&&` instead of `and` for the boolean operator

error: expected one of `!`, `)`, `,`, `.`, `::`, `?`, `{`, or an operator, found `or`
  --> $DIR/issue-54109-and_instead_of_ampersands.rs:41:11
   |
LL |     if (a or b) {
   |           ^^ expected one of 8 possible tokens here
   |
   = help: Use `||` instead of `or` for the boolean operator

error: aborting due to 4 previous errors

